Persistence complete refactoring