@@ -1,25 +1,21 @@
 package fr.jamailun.reignofcubes2.configuration;
 
-import fr.jamailun.reignofcubes2.GameManagerImpl;
 import fr.jamailun.reignofcubes2.MainROC2;
 import fr.jamailun.reignofcubes2.api.configuration.BadConfigurationException;
+import fr.jamailun.reignofcubes2.api.configuration.PropertiesHolder;
 import fr.jamailun.reignofcubes2.api.configuration.RocConfiguration;
+import fr.jamailun.reignofcubes2.api.configuration.UnknownConfigurationException;
 import fr.jamailun.reignofcubes2.api.gameplay.Throne;
 import fr.jamailun.reignofcubes2.api.utils.ParticlesHelper;
-import fr.jamailun.reignofcubes2.configuration.pickups.PickupConfigurationSection;
-import fr.jamailun.reignofcubes2.configuration.sections.GameRulesSection;
-import fr.jamailun.reignofcubes2.configuration.sections.TagsConfigurationSection;
-import fr.jamailun.reignofcubes2.configuration.sections.WorldSection;
 import fr.jamailun.reignofcubes2.gameplay.throne.ThroneImpl;
-import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.Particle;
-import org.bukkit.World;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitTask;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.util.*;
@@ -34,68 +30,66 @@ public class GameConfiguration extends RocConfiguration {
         super(file);
     }
 
-    public GameConfiguration(File file, String name, String author, String worldName) {
+    public GameConfiguration(@NotNull File file, @NotNull String name, @NotNull String author, @NotNull String worldName) {
         super(file, name, author, worldName);
-        reloadSections();
+        reloadHolders();
     }
 
-    public TagsConfigurationSection getTagsSection() {
-        return getSection(TagsConfigurationSection.class);
+    @Override
+    protected void reloadHolders() {
+        rulesHolder.clear();
+        rulesHolder.put("metadata", this);
+        rulesHolder.put("rules", new GameRules());
+        rulesHolder.put("world", new WorldDefinition());
+        rulesHolder.put("tags", new TagsHolder());
     }
 
-    public GameRulesSection getRules() {
-        return getSection(GameRulesSection.class);
+    public <T> T getValue(@NotNull String path, @NotNull Class<T> clazz) throws UnknownConfigurationException {
+        String[] primary = path.split("\\.", 2);
+        PropertiesHolder holder = rulesHolder.get(primary[0]);
+        if(holder == null) throw new UnknownConfigurationException(path);
+        return holder.get(primary[1], clazz);
     }
 
-    public PickupConfigurationSection getPickupsSection() {
-        return getSection(PickupConfigurationSection.class);
+    public void setValue(@NotNull String path, @Nullable Object value) throws UnknownConfigurationException {
+        String[] primary = path.split("\\.", 2);
+        PropertiesHolder holder = rulesHolder.get(primary[0]);
+        if(holder == null) throw new UnknownConfigurationException(path);
+        holder.set(primary[1], value);
     }
 
-    public WorldSection getWorldSection() {
-        return getSection(WorldSection.class);
-    }
-
-    private World getWorld() {
-        return Bukkit.getWorld(getWorldName());
-    }
-
-    public Throne generateThrone(GameManagerImpl game) {
-        if(!isValid())
+    public @NotNull Throne generateThrone() {
+        if(!isPlayable())
             throw new RuntimeException("Can only generate a throne if the configuration is valid.");
         if(getWorld() == null)
             throw new RuntimeException("Invalid world: "+getWorldName()+".");
-        WorldSection worldSection = getSection(WorldSection.class);
-        return new ThroneImpl(game, worldSection.getThroneA(), worldSection.getThroneB());
+        WorldDefinition worldSection = getWorldDefinition();
+        return new ThroneImpl(getWorld(), worldSection.getThroneA(), worldSection.getThroneB());
     }
 
     public Location getLobby() {
-        WorldSection worldSection = getSection(WorldSection.class);
+        WorldDefinition worldSection = getWorldDefinition();
+        assert getWorld() != null;
         return worldSection.getLobby().toLocation(getWorld());
     }
 
     public List<Location> generateSpawns() {
-        assert isValid() : "Can only generate spawns if the configuration is valid.";
-        return getSection(WorldSection.class).getSpawns().stream()
+        if(!isPlayable())
+            throw new RuntimeException("Can only generate spawns if the configuration is valid.");
+        assert getWorld() != null;
+
+        return getWorldDefinition().getSpawns().stream()
                 .map(v -> v.toLocation(getWorld()))
                 .collect(Collectors.toCollection(ArrayList::new));
     }
 
     public List<Vector> spawnsList() {
-        return getSection(WorldSection.class).getSpawns();
+        return getWorldDefinition().getSpawns();
     }
 
-    public List<Location> getGeneratorsList(World world) {
-        return getSection(WorldSection.class).getGenerators().stream()
-                .map(v -> v.toLocation(world))
-                .toList();
-    }
-
-    public List<Vector> listGenerators() {
-        return getSection(WorldSection.class).getGenerators();
-    }
-
+    @Override
     public ItemStack getShopItem() {
-        return getSection(WorldSection.class).getShopItem();
+        return new ItemStack(getWorldDefinition().getShopItem());
     }
 
     public Location getSafeSpawn(boolean trySafe) {
@@ -112,10 +106,11 @@ public class GameConfiguration extends RocConfiguration {
             }
         }
 
-        return locations.get(0);
+        return locations.getFirst();
     }
 
     private boolean isSafe(Location location) {
+        assert getWorld() != null;
         return getWorld().getNearbyPlayers(location, 10).isEmpty();
     }
 
@@ -129,7 +124,7 @@ public class GameConfiguration extends RocConfiguration {
                 showing.remove(uuid).cancel();
                 return false;
             }
-            WorldSection section = getSection(WorldSection.class);
+            WorldDefinition section = getWorldDefinition();
             BukkitTask task = MainROC2.runTaskTimer(() -> {
                 // throne
                 if(section.getThroneA() != null) {
@@ -138,11 +133,11 @@ public class GameConfiguration extends RocConfiguration {
                         Location b = section.getThroneB().toLocation(player.getWorld());
                         ParticlesHelper.playBox(player, a, b, 0.2, Particle.FLAME);
                     } else {
-                        ParticlesHelper.playLine(player, a, a.clone().add(0, 0.1, 0), 0.1, Particle.ENCHANTMENT_TABLE);
+                        ParticlesHelper.playLine(player, a, a.clone().add(0, 0.1, 0), 0.1, Particle.ENCHANT);
                     }
                 } else if(section.getThroneB() != null) {
                     Location b = section.getThroneB().toLocation(player.getWorld());
-                    ParticlesHelper.playLine(player, b, b.clone().add(0, 0.1, 0), 0.1, Particle.ENCHANTMENT_TABLE);
+                    ParticlesHelper.playLine(player, b, b.clone().add(0, 0.1, 0), 0.1, Particle.ENCHANT);
                 }
 
                 // spawns
@@ -151,10 +146,10 @@ public class GameConfiguration extends RocConfiguration {
                     ParticlesHelper.playCircleXZ(player, l, 1, Math.toRadians(6), Particle.DRAGON_BREATH);
                 }
 
-                // Generators
-                for(Vector v : section.getGenerators()) {
+                // Mines
+                for(Vector v : section.getMines()) {
                     Location l = v.toLocation(player.getWorld()).add(0, 0.1, 0);
-                    ParticlesHelper.playCircleXZ(player, l, 1, Math.toRadians(6), Particle.TOTEM);
+                    ParticlesHelper.playCircleXZ(player, l, 1, Math.toRadians(6), Particle.HEART);
                 }
 
                 //lobby
@@ -166,6 +161,13 @@ public class GameConfiguration extends RocConfiguration {
             showing.put(uuid, task);
             return true;
         }
+    }
+
+    public @NotNull GameRules getRulesHolder() {
+        return holder("rules", GameRules.class);
+    }
+    public @NotNull WorldDefinition getWorldDefinition() {
+        return holder("world", WorldDefinition.class);
     }
 
 }
